[tool.poetry]
name = "TesterFramework"
version = "0.1.0"
description = ""
authors = ["mike"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
coverage = "^5.1"

[tool.poetry.dev-dependencies]
coverage = "^5.1"


[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
